# dials-resarch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: app.rs  audio.rs  ball.rs  config.rs  dial.rs  dial_widget.rs  dialog_popup.rs  error_popup.rs  frame.rs  lib.rs  main.rs  output.rs  projectile.rs  tracking_widget.rs  window.rs
