[package]
name = "dials-research"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.18.0"
lazy_static = "1.4.0"

hound = "3.4"
rodio = "0.15.0"

stick = "0.12.4"
pasts = "0.8"

rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
anyhow = "1.0.63"
log = "0.4.17"
env_logger = "0.9.0"
