[package]
name = "dials-research"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.63"
derive-new = "0.5.9"
eframe = "0.21.3"
env_logger = "0.10.0"
gilrs = "0.10.1"
hound = "3.4"
lazy_static = "1.4.0"
log = "0.4.17"
rodio = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.2"
